View-source now works on chrome://interstitials/...

View source was not working correctly on individual subsites of
chrome://interstitials (e.g. chrome://interstitials/ssl) due to
web_contents not holding a correct URL when a call to StartDataRequest
was triggered from a view-source: url. The "chrome://interstitials/"
URL is now hardcoded in InterstitialHTMLSource::StartDataRequest (since
calls to that function only happen when opening a
chrome://interstitials page). Tests were also added for this case.

R=estark@chromium.org

Bug: 769876
Change-Id: I432c02be1b873918ac2bb9a8e0f17dea39aa5043
Reviewed-on: https://chromium-review.googlesource.com/692976
Reviewed-by: Emily Stark <estark@chromium.org>
Reviewed-by: Lucas Garron <lgarron@chromium.org>
Commit-Queue: Carlos IL <carlosil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505709}
Former-commit-id: 5dc1ae293b358e440896706273c609854664c58f